# nba_rapm

./: .gitignore  README.md  pyproject.toml
.virtual_documents/python code and notebooks/: stint_pt_differential_builder.ipynb
python code and notebooks/: failed_games.pkl
python code and notebooks/.ipynb_checkpoints/: stint_pt_differential_builder-checkpoint.ipynb
