[project]
name = "nba-rapm"
version = "0.1.0"
description = ""
authors = [
    {name = "Sameer Prasad Koppolu",email = "sameerkoppolu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "nba_rapm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "*"
numpy = "*"
nba_api = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
